--- a/conf.d/x11vnc.conf
+++ b/conf.d/x11vnc.conf
@@ -1,3 +1,6 @@
 [program:x11vnc]
 command=x11vnc -forever -shared
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
